--- a/package.json
+++ b/package.json
@@ -3,14 +3,23 @@
   "scripts": {
     "dev": "next",
     "build": "next build",
-    "start": "next start"
+    "start": "next start",
+    "test": "jest"
   },
   "devDependencies": {
-    "@emotion/babel-plugin": "11.10.2"
+    "@emotion/babel-plugin": "11.10.2",
+    "@emotion/jest": "^11.11.0",
+    "@testing-library/jest-dom": "^5.16.5",
+    "@testing-library/react": "^14.0.0",
+    "babel-jest": "^29.5.0",
+    "jest": "^29.5.0",
+    "jest-environment-jsdom": "^29.5.0"
   },
   "dependencies": {
+    "@apollo/client": "^3.7.14",
     "@emotion/react": "11.10.4",
     "@emotion/styled": "11.10.4",
+    "graphql": "^16.6.0",
     "next": "latest",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
