--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@emotion/styled": "11.10.4",
     "graphql": "^16.6.0",
     "next": "latest",
+    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
