--- a/package.json
+++ b/package.json
@@ -11,9 +11,14 @@
     "@emotion/jest": "^11.11.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^14.0.0",
+    "@types/jest": "^29.5.2",
+    "@types/node": "^20.2.5",
+    "@types/react": "18.2.0",
     "babel-jest": "^29.5.0",
     "jest": "^29.5.0",
-    "jest-environment-jsdom": "^29.5.0"
+    "jest-environment-jsdom": "^29.5.0",
+    "ts-jest": "^29.1.0",
+    "typescript": "^5.1.3"
   },
   "dependencies": {
     "@apollo/client": "^3.7.14",
@@ -21,7 +26,6 @@
     "@emotion/styled": "11.10.4",
     "graphql": "^16.6.0",
     "next": "latest",
-    "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   }
