--- a/.github/workflows/node.js.yml
+++ b/.github/workflows/node.js.yml
@@ -1,18 +1,18 @@
 # This workflow will do a clean installation of node dependencies, cache/restore them, build the source code and run tests across different versions of node
 # For more information see: https://docs.github.com/en/actions/automating-builds-and-tests/building-and-testing-nodejs
 
-name: Node.js CI with TypeScript
+name: Node.js CI
 
 on:
   push:
-    branches:
+    branches: 
       - main
       - 'feature/*'
   pull_request:
-    branches:
+    branches: 
       - main
       - 'feature/*'
-
+      
 jobs:
   build:
 
@@ -23,16 +23,15 @@ jobs:
         node-version: [16.x, 18.x]
 
     steps:
-      - uses: actions/checkout@v3
-      - name: Use Node.js ${{ matrix.node-version }}
-        uses: actions/setup-node@v3
-        with:
-          node-version: ${{ matrix.node-version }}
-          cache: 'yarn'
-      - run: yarn install --frozen-lockfile
-      - name: Install TypeScript
-        run: yarn add -D typescript
-      - name: Build with TypeScript
-        run: yarn build
-      - name: Test with TypeScript
-        run: yarn test
+    - uses: actions/checkout@v3
+    - name: Use Node.js ${{ matrix.node-version }}
+      uses: actions/setup-node@v3
+      with:
+        node-version: ${{ matrix.node-version }}
+        cache: 'yarn'
+    - run: yarn install --frozen-lockfile
+    - name: Build
+      run: yarn build
+      env:
+        NEXT_PUBLIC_GITHUB_TOKEN: ${{ secrets.NEXT_PUBLIC_GITHUB_TOKEN }}
+    - run: yarn test
